backend fixed and enhanced